# mathcalculator

./: .gitignore  LICENSE  README.md  p.qmd  pyproject.toml
mathcalculator/: __init__.py  calculator.py
tests/: test_calculator.py
