[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathcalculator"
version = "0.1.0"
description = "A simple calculator package for basic mathematical operations"
authors = [
    {name = "Bracken", email = "bracken576@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/bracken576/mathcalculator"

[project.optional-dependencies]
dev = ["pytest>=6.0"]